pre-alpha version

--- a/static/default.css
+++ b/static/default.css
@@ -3,3 +3,7 @@
 	-moz-box-shadow: inset 0px 0px 0px 1px rgba(255,0,13,1) !important;
 	box-shadow: inset 0px 0px 0px 1px rgba(255,0,13,1) !important;
 }
+
+body {
+	pointer-events: none !important;
+}
